deploy/traefik/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: backend

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /server-api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
